--- a/src/main/resources/templates/compute.mustache
+++ b/src/main/resources/templates/compute.mustache
@@ -1,5 +1,6 @@
 <title>My application</title>
-<h1>Hello, World!</h1>
+<h1>3 GİRDİ ALIP TOPLAMININ LİSTEDE OLUP OLMADIĞINI BULUR</h1>
+<h1>ARRAY = GİRDİ1 + GİRDİ2 + GİRDİ3</h1>
 Result is {{result}}
 <form action="compute" method="post">
     <textarea name="input1" rows="10" cols="30"></textarea>
